--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <script
         src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyAO7Mg2Cs1qzo_3jkKkZAKY6jtwIlm41-I"></script>
 </head>
